--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "components-font-awesome": "^5.9.0",
     "font-mfizz": "^2.4.1",
     "gritter": "^1.7.4",
-    "jquery": "^3.4.1",
+    "jquery": ">=3.5.0",
     "jquery-slimscroll": "^1.3.8",
     "metismenu": "^3.0.4",
     "normalize.css": "^8.0.1",
-    "npm": ">=6.13.4",
+    "npm": "^6.14.4",
     "pace-progress": "^1.0.2",
     "peity": "^3.3.0",
     "popper.js": "^1.16.0",
