--- a/package.json
+++ b/package.json
@@ -26,21 +26,22 @@
     "components-font-awesome": "^5.9.0",
     "font-mfizz": "^2.4.1",
     "gritter": "^1.7.4",
-    "jquery": ">=3.5.0",
+    "jquery": "^3.5.1",
     "jquery-slimscroll": "^1.3.8",
-    "metismenu": "^3.0.4",
+    "metismenu": "^3.0.6",
     "normalize.css": "^8.0.1",
-    "npm": "^6.14.6",
+    "npm": "^6.14.8",
     "pace-progress": "^1.0.2",
     "peity": "^3.3.0",
-    "popper.js": "^1.16.0",
+    "popper.js": "^1.16.1",
     "purify-css": "^1.2.5",
-    "wowjs": "^1.1.3"
+    "wowjs": "^1.1.3",
+    "yargs-parser": "^20.0.0"
   },
   "devDependencies": {
-    "clean-css": "^4.2.1",
-    "mem": "^6.0.1",
-    "shelljs": "^0.8.3",
-    "uglify-js": "^3.7.2"
+    "clean-css": "^4.2.3",
+    "mem": "^6.1.1",
+    "shelljs": "^0.8.4",
+    "uglify-js": "^3.10.4"
   }
 }
